--- a/www_dir/main.css
+++ b/www_dir/main.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import url(http://fonts.googleapis.com/css?family=Roboto:300);
+@import url("//fonts.googleapis.com/css?family=Roboto:300");
 
 /* CSS Document */
 
